--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "lenis": "^1.1.20",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "swiper": "^11.2.1",
     "tailwindcss": "^4.0.1"
   },
   "devDependencies": {
