--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "masonry-layout": "^4.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.4",
     "swiper": "^11.2.1",
     "tailwindcss": "^4.0.1"
   },
